--- a/Html/Coding_Exercises/Task_01.html
+++ b/Html/Coding_Exercises/Task_01.html
@@ -1,3 +1,4 @@
+<!-- Basic Webpage Structure -->
 <!-- Create a simple HTML document with:
 A title
 One main heading
@@ -7,7 +8,7 @@ A link to another site (e.g., Google) -->
 
 <!DOCTYPE html>
 <head>
-<title>Webpage Title</title>
+<title>Task 1</title>
 </head>
 <body>
 <h1>My First Webpage</h1>
